[tool.poetry]
name = "hapi"
version = "1.3.1"
description = "Distributed Hydrological and Hydrodynamic model"
authors = ["Mostafa Farrag <moah.farag@gmail.com>"]
license = "GNU General Public License v3"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
loguru = "^0.6.0"
requests = "^2.28.1"
matplotlib = "^3.5.3"
GDAL = "3.4.3"
pandas = "^1.4.4"
geopandas = "^0.11.1"
scipy = "^1.9.1"
statsmodels = "^0.13.2"
rasterstats = "^0.17.0"
cleopatra = "^0.2.2"
digitalearth = "^0.1.4"
statista = "^0.1.4"
pyramids-gis = "^0.2.4"
geostatista = "^0.1.2"
Oasis-Optimization = "^1.0.2"
rasterio = "^1.3.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
black = "^22.8.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.9.11"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
reorder-python-imports = "^3.8.2"
pre-commit-hooks = "^4.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
