[project]
name = "HAPI-Nile"
version = "1.7.0"
description = "Distributed hydrological-model"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Mostafa Farrag", email = "moah.farag@gmail.com" }
]
license = {text = "GNU General Public License v3"}
keywords = ["Hydrology", "Distributed hydrological model"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

requires-python = ">=3.0"

dependencies = [
    "gdal == 3.10.1",
    "geopandas >=1.0.1",
    "loguru >=0.7.2",
    "numpy >=2.1.3",
    "pandas >=2.2.3",
    "pip >=24.3.1",
    "PyYAML >=6.0.2",
    "pyramids-gis >=0.6.0",
    "requests >=2.31.0",
    "scipy >=1.11.4",
    "serapeum_utils >=0.2.0",
    "statista >=0.6.0",
    "Oasis-Optimization >=1.0.3",
    "cleopatra>=0.5.1",
    "matplotlib >=3.7.2"
]

[project.optional-dependencies]
dev = [
    "black >=24.4.2",
    "darglint >=1.8.1",
    "flake8-bandit >=4.1.1",
    "flake8-bugbear >=24.4.26",
    "flake8-docstrings >=1.7.0",
    "flake8-rst-docstrings >=0.3.0",
    "nbval >=0.11.0",
    "pep8-naming >=0.14.1",
    "pre-commit >=3.7.1",
    "pre-commit-hooks >=4.6.0",
    "reorder-python-imports >=3.13.0",
    "flake8-pyproject >=1.2.3"
]

test = [
    "pytest >= 8.2.2",
    "pytest-cov >= 6.0.0",
    "nbval >= 0.11.0",
    "coverage"
]

analysis = [
    "jupyterlab"
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]
include = ["Hapi", "Hapi.*"]


[tool.setuptools.package-data]
Hapi = ["*.yaml", "include/gdal/*.h"]


[tool.pip.index-url]
url = "https://girder.github.io/large_image_wheels"

[project.urls]
homepage = "https://github.com/Serapieum-of-alex/Hapi"
repository = "https://github.com/Serapieum-of-alex/Hapi"
documentation = "https://pyramids-gis.readthedocs.io/"
Changelog = "https://github.com/Serapieum-of-alex/pyramids/HISTORY.rst"

[tool.flake8]
ignore = "E203, E266, E501, W503, E722, C901, E741, E731"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88


[tool.pytest.ini_options]
markers = [
    "vfs: mark a test as a virtual file system.",
    "slow: mark test as slow.",
    "fast: mark test as fast.",
    "plot: test plotting function optional package (deselect with '-m \"not plot\"')",
    "e2e: end-to-end test (deselect with '-m \"not e2e\"')",
    "mock: mock test (deselect with '-m \"not mock\"')",
    "integration: mock test (deselect with '-m \"not integration\"')",
    "fig_share: mock test (deselect with '-m \"not fig_share\"')"
]


[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.scripts]
download-parameters = "Hapi.parameters.parameters:main"
download-parameter-set = "Hapi.parameters.parameters:main"
list-parameter-names = "Hapi.parameters.parameters:main"
